# sounddevice-Study

./: pyproject.toml
examples/: play_file.py  play_long_file.py
